# huposit

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyrightconfig.json  turbo.json
apps/api/: package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  cors.py  errors.py  security.py  token.py
apps/api/app/db/: session.py
apps/api/app/db/migrations/: env.py
apps/api/app/db/migrations/versions/: e5808c043938_create_users_table.py
apps/api/app/features/auth/: error.py  model.py  repository.py  router.py  schema.py  service.py
apps/api/app/features/health/: repository.py  router.py  schema.py  service.py
apps/api/app/tools/: export_openapi.py
apps/api/tests/: conftest.py  test_auth_login.py  test_auth_signup.py  test_health.py  test_openapi_export.py
apps/web/: components.json  eslint.config.js  package.json  vite.config.ts
apps/web/app/: app.css  root.tsx
apps/web/app/core/api/: client.ts  openapi-helpers.ts  openapi-types.ts
apps/web/app/core/lib/: api-fetch.ts
apps/web/app/features/auth/: api.ts  type.ts
apps/web/app/features/health/: api.ts  type.ts
apps/web/app/routes/: home.test.tsx  home.tsx
apps/worker/: package.json  pyproject.toml
apps/worker/app/: main.py
apps/worker/tests/: test_main.py
docs/: backend.md  frontend.md  testflow.md  workflow.md
docs/logs/: README.md
docs/logs/2026-06/week-25/: 2026-06-19.md  2026-06-20.md  2026-06-21.md
docs/logs/2026-06/week-26/: 2026-06-24.md  2026-06-26.md  2026-06-27.md
infra/: compose.yml
(+14 files in other folders)
